--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/vehicle-fuel-comparison",
+            "outputPath": "docs",
+            "baseHref": "/vehicle-fuel-compariso/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
