--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "postbuild": "powershell -ExecutionPolicy Bypass -File move-files-to-docs.ps1",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
